# mj

./: .gitignore  README.md  ceiling.labelstudio.xml  code.labelstudio.txt  inst-labeling.md  pyproject.toml  requirements.txt  setup.py
apps/: tehai_analyzer_menu.py
apps/kifu_api/: README.md  requirements.txt
apps/kifu_api/app/: main.py
apps/kifu_ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/kifu_ui/src/: App.tsx  index.css
apps/src/: tehai_analyzer_img.py  tehai_analyzer_mov.py  tehai_recorder.py
mj/: analyzer.py  calcHand.py  discard_policy.py  machi.py  showMelds.py  toMelds.py  usage.py  utils.py
mj/models/labelstudio/: memo.md
mj/models/lanelstudio/settings/: atHand.labelstudio.xml
mj/models/roboflow/: roboflow_to_yolo.py
mj/models/settings/: ceiling.labelstudio.xml  inst-labeling.md
mj/models/tehai/: auto_annotate.py  make_dataset.py  myyolo.py  predict.py  roboflow_to_yolo.py  train-gpu.py  train-mps.py  train.py
mj/models/tehai/roboflow/settings/: labelmap.txt
mj/models/upcam/: hello.py
src/: analyzer.py  data-maker.py  detect.py  inference.py  make_datasets.py  mjpai.py  out.py  pai-recognition.py  test.py  train.py
