[project]
name = "mj-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "huggingface>=0.0.1",
    "mahjong>=1.3.0",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "tokenizers>=0.21.4",
    "transformers>=4.55.2",
    "ultralytics>=8.3.179",
]
