[project]
name = "mj-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "fastapi>=0.115.2",
    "huggingface>=0.0.1",
    "mahjong>=1.3.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "streamlit>=1.49.1",
    "streamlit-image-select>=0.6.0",
    "streamlit-webrtc>=0.63.4",
    "tokenizers>=0.21.4",
    "transformers>=4.55.2",
    "uvicorn[standard]>=0.30.6",
    "ultralytics>=8.3.179",
]
